<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZombieGame</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="PlayButton">Play</string>
    <string name="SelectLevelButton">Select Level</string>
    <string name="StatisticsButton">Statistics</string>
    <string name="UpgradesButton">Upgrades</string>
    <string name="TutorialButton">Tutorial</string>
    <string name="title_activity_game">Zombie Game</string>
    <string name="resume_game">Resume Game</string>
    <string name="exit_game">Exit Game</string>

</resources>