<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"    
		android:orientation = "horizontal"
		android:background = "#000000"
		android:layout_width = "fill_parent"
		android:layout_height = "fill_parent" >
	
	<LinearLayout
		android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
		android:layout_weight = "1">
		    
	        <ImageView
	            android:id="@+id/imageView1"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:src="@drawable/title4" />

	</LinearLayout>
	
	<LinearLayout 
		android:orientation = "vertical"
		android:layout_width = "fill_parent"
		android:layout_height = "fill_parent"
		android:layout_weight = "4" >
		    
		<LinearLayout
			android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical" >  
		    
		    <Button
		        android:id="@+id/button1"
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:layout_gravity="right"
		        android:layout_weight="1"
		        android:background = "#aa0000"
		        android:layout_marginBottom = "5dp"
		        android:text="@string/PlayButton" />
		
		    <Button
		        android:id="@+id/button2"
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:layout_gravity="right"
		        android:layout_weight="1"
		        android:background = "#aa0000"
		        android:layout_marginBottom = "5dp"
		        android:text="@string/SelectLevelButton" />
		
		    <Button
		        android:id="@+id/button3"
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:layout_gravity="right"
		        android:layout_weight="1"
		        android:background = "#aa0000"
		        android:layout_marginBottom = "5dp"
		        android:text="@string/UpgradesButton" />
		
		    <Button
		        android:id="@+id/button4"
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:layout_gravity="right"
		        android:layout_weight="1"
		        android:background = "#aa0000"
		        android:layout_marginBottom = "5dp"
		        android:text="@string/StatisticsButton" />
		
		    <Button
		        android:id="@+id/button5"
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:layout_gravity="right"
		        android:layout_weight="1"
		        android:background = "#aa0000"
		        android:layout_marginBottom = "5dp"
		        android:text="@string/TutorialButton" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>